--- a/trabajador.html
+++ b/trabajador.html
@@ -76,5 +76,8 @@
 	<script src="app/shared/services/apiServices.js"></script>
 	<script src="app/shared/services/sessionServices.js"></script>
 	<script src="app/shared/services/authenticationServices.js"></script>
+	<!-- filters -->
+	<script src="app/shared/filters/filters.js"></script>
+	<script src="app/shared/filters/dinamicSource.js"></script>
 </body>
 </html>
