--- a/admin.html
+++ b/admin.html
@@ -113,6 +113,8 @@
 	<script src="app/shared/services/empresaServices.js"></script>
 	<!-- angular-file-upload -->
 	<script src="node_modules/angular-file-upload/dist/angular-file-upload.min.js"></script>
+	<!-- uiuploader -->
+	<script src="node_modules/angular-ui-uploader/dist/uploader.min.js"></script>
 
 </body>
 
