--- a/admin.html
+++ b/admin.html
@@ -49,6 +49,8 @@
 	<script src="app/components/admin/admin.js"></script>
 	<script src="app/components/admin/loginController.js"></script>
 	<script src="app/components/admin/navbarController.js"></script>
+	<script src="app/components/admin/navbarController.js"></script>
+	<script src="app/components/admin/inicioController.js"></script>
 	<!-- Modulos -->
 	<script src="app/shared/modules/user/user.js"></script>
 	<script src="app/shared/modules/user/adminController.js"></script>
