--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,7 @@
 	<title>Q-Plan</title>
 	<!-- Dependencias CSS -->
 	<link href="css/bootstrap.cerulean.min.css" rel="stylesheet">
+	<link href="css/treeview.css" rel="stylesheet">
 	<link href="node_modules/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet">
 	<link href="node_modules/angular-motion/dist/angular-motion.min.css" rel="stylesheet">
 	<!-- css perzonalice -->
