--- a/admin.html
+++ b/admin.html
@@ -120,6 +120,8 @@
 	<script src="node_modules/angular-file-upload/dist/angular-file-upload.min.js"></script>
 	<!-- uiuploader -->
 	<script src="node_modules/angular-ui-uploader/dist/uploader.min.js"></script>
+	<!-- uiselect -->
+	<script src="node_modules/ui-select/dist/select.min.js"></script>
 
 </body>
 
