--- a/trabajador.html
+++ b/trabajador.html
@@ -58,6 +58,7 @@
 	<script src="app/components/trabajador/terminoController.js"></script>
 	<script src="app/components/trabajador/authController.js"></script>
 	<script src="app/components/trabajador/configController.js"></script>
+	<script src="app/components/trabajador/psicologicoPcaController.js"></script>
 	<!-- Servicios -->
 	<script src="app/shared/services/REST/ApiRest.js"></script>
 	<script src="app/shared/services/paisServices.js"></script>
