--- a/trabajador.html
+++ b/trabajador.html
@@ -77,6 +77,7 @@
 	<script src="app/shared/services/apiServices.js"></script>
 	<script src="app/shared/services/sessionServices.js"></script>
 	<script src="app/shared/services/authenticationServices.js"></script>
+	<script src="app/shared/services/psicologicopcaServices.js"></script>
 	<!-- filters -->
 	<script src="app/shared/filters/filters.js"></script>
 	<script src="app/shared/filters/dinamicSource.js"></script>
