--- a/admin.html
+++ b/admin.html
@@ -59,6 +59,7 @@
 	<script src="app/shared/modules/user/updateController.js"></script>
 	<script src="app/shared/modules/user/viewController.js"></script>
 	<script src="app/shared/modules/user/resources/adminController.js"></script>
+	<script src="app/shared/modules/user/authentication/adminController.js"></script>
 	<script src="app/shared/modules/ot/ot.js"></script>
 	<script src="app/shared/modules/ot/adminControlller.js"></script>
 	<script src="app/shared/modules/ot/createController.js"></script>
