--- a/admin.html
+++ b/admin.html
@@ -52,6 +52,9 @@
 	<script src="app/components/admin/navbarController.js"></script>
 	<script src="app/components/admin/navbarController.js"></script>
 	<script src="app/components/admin/inicioController.js"></script>
+	<!-- Filtros -->
+	<script src="app/shared/filters/filters.js"></script>
+	<script src="app/shared/filters/Calificacion.js"></script>
 	<!-- Modulos -->
 	<script src="app/shared/modules/user/user.js"></script>
 	<script src="app/shared/modules/user/adminController.js"></script>
@@ -106,8 +109,8 @@
 	<script src="app/shared/modules/perfil/editperfilController.js"></script>
 	<script src="app/shared/modules/perfil/viewperfilController.js"></script>
 	<!-- Servicios -->
-	<script src="app/shared/services/REST/ApiRest.js"></script>
-	<script src="app/shared/services/sessionServices.js"></script>
+	<script src="app/shared/services/REST/admin/rest.js"></script>
+	<script src="app/shared/services/REST/admin/sessionServices.js"></script>
 	<script src="app/shared/services/authenticationServices.js"></script>
 	<script src="app/shared/services/authInterceptor.js"></script>
 	<script src="app/shared/services/userServices.js"></script>
