--- a/admin.html
+++ b/admin.html
@@ -11,6 +11,7 @@
 	<link href="css/treeview.css" rel="stylesheet">
 	<link href="node_modules/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet">
 	<link href="node_modules/angular-motion/dist/angular-motion.min.css" rel="stylesheet">
+	<link href="node_modules/ui-select/dist/select.min.css" rel="stylesheet">
 	<!-- css perzonalice -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
