--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
 	<!-- Dependencias CSS -->
 	<link href="css/bootstrap.cerulean.min.css" rel="stylesheet">
 	<link href="css/treeview.css" rel="stylesheet">
+	<link href="css/loader.css" rel="stylesheet">
 	<link href="node_modules/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet">
 	<link href="node_modules/angular-motion/dist/angular-motion.min.css" rel="stylesheet">
 	<link href="node_modules/ui-select/dist/select.min.css" rel="stylesheet">
