servicio de pdf

--- a/admin.html
+++ b/admin.html
@@ -122,6 +122,7 @@
 	<script src="app/shared/services/comunaServices.js"></script>
 	<script src="app/shared/services/trabajadorServices.js"></script>
 	<script src="app/shared/services/empresaServices.js"></script>
+	<script src="app/shared/services/reportServices.js"></script>
 	<!-- angular-file-upload -->
 	<script src="node_modules/angular-file-upload/dist/angular-file-upload.min.js"></script>
 	<!-- uiuploader -->
