--- a/do.html
+++ b/do.html
@@ -39,11 +39,13 @@
 	<script src="app/shared/services/REST/do/rest.js"></script>
 	<script src="app/shared/services/REST/do/sessionServices.js"></script>
 	<script src="app/shared/services/trabajadorStorage.js"></script>
+	<script src="app/shared/services/evaluacionStorage.js"></script>
 	<script src="app/shared/services/authenticationServices.js"></script>
 	<script src="app/shared/services/apiServices.js"></script>
 	<!-- filters -->
 	<script src="app/shared/filters/filters.js"></script>
 	<script src="app/shared/filters/DominicanCIE.js"></script>
+	<script src="app/shared/filters/dinamicSource.js"></script>
 	<!-- app -->
 	<script src="app/components/do/do.js"></script>
 	<script src="app/components/do/evaluation.js"></script>
