--- a/do.html
+++ b/do.html
@@ -50,6 +50,7 @@
 	<script src="app/components/do/do.js"></script>
 	<script src="app/components/do/evaluation.js"></script>
 	<script src="app/components/do/register.js"></script>
+	<script src="app/components/do/finished.js"></script>
 	<script src="app/components/do/auth.js"></script>
 
 </body>
